trying to fix thing on mobile but not successful

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -44,6 +44,10 @@
         <!-- welcome section for the webpage -->
         <section id="welcome">
             <img src="images/main-banner.jpg" alt="The office with chairs and table">
+
+            <!-- Class for the square opacity -->
+             <div class="welcomeoverlay"></div>
+             
             <!-- class for the main title of the page -->
             <div class="welcome-text">
                 <h1>Welcome to Three Star Media</h1>
